--- a/_includes/tofu/product/index.html
+++ b/_includes/tofu/product/index.html
@@ -42,7 +42,7 @@
 │    │    │ └ 售价：16.5元/袋，含0.5元包装费。
 │    │    └ 散装
 │    │       └ 售价：8元/斤，需自带容器。</div></div></div></div>
-│    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆腐乳</span><em class="new" title="热销">新</em><div class="collapse-body">
+│    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆腐乳</span><em class="new" title="上新">新</em><div class="collapse-body">
 │       └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
 │          ├ 大瓶
 │          │ ├ 重量：≈1.5千克。
@@ -50,5 +50,4 @@
 │          └ 小瓶
 │             ├ 重量：≈300克。
 │             └ 售价：8元。</div></div></div></div><!-- others --></div></div>
-│
 │</div></div>
