--- a/_includes/tofu/sales/index.html
+++ b/_includes/tofu/sales/index.html
@@ -1,31 +1,5 @@
-└ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">销售点</span><div class="collapse-body">
-   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营</span><div class="collapse-body">
-   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
-   │ │ └ <em>敬请期待...</em></div></div>
-   │ ├ 银桥
-   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">线上</span><div class="collapse-body">
-   │    └ 支持地区
-   │       ├ 云南
-   │       ├ 四川
-   │       └ 重庆</div></div>
-   │</div></div>
-   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">经销商</span><div class="collapse-body">
-      ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">当前</span><div class="collapse-body">
-      │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">素方舟未来空间</span><div class="collapse-body">
-      │ │ └ 地址：<span class="map-open-btn" title="点击查看地图">214国道与双狮路交叉口东南角向南30米处</span>。</div></div>
-      │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">一沐坤·原生态</span><div class="collapse-body">
-      │ │ ├ 地址：<span class="map-open-btn" title="点击查看地图">三塔路大理三塔苑酒店西侧</span>。
-      │ │ └ 电话：18183727226。</div></div>
-      │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大昌盛超市</span><div class="collapse-body">
-      │ │ └ 地址：<span class="map-open-btn" title="点击查看地图">玉洱路242-1号</span>。</div></div>
-      │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">优鲜蔬菜屋</span><div class="collapse-body">
-      │    └ 地址：<span class="map-open-btn" title="点击查看地图">弘圣路6-32号</span>。</div></div>
-      │</div></div>
-      └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">计划</span><div class="collapse-body">
-         └ 我们期望能在以下地区有新的经销商，有意者请联系我们。<div class="inactived">
-            ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
-            │ └ 人民路/复兴路</div></div>
-            ├ 喜洲
-            ├ 双廊
-            └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">下关</span><div class="collapse-body">
-               └ 大关邑</div></div><!-- inactived --></div><!-- 计划 --></div></div><!-- 经销商 --></div></div><!-- 销售点 --></div></div>
+└ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">销售点</span><div class="collapse-body active">
+{% include tofu/sales/a.html %}
+   └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">经销商</span><div class="collapse-body active">
+{% include tofu/sales/b.html %}</div></div>
+</div></div>
