--- a/_includes/tofu/about.html
+++ b/_includes/tofu/about.html
@@ -1,4 +1,4 @@
-├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse" style="font-weight: bold;">关于</span><div class="collapse-body" style="display: inline;">
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">关于</span><div class="collapse-body">
 │ ├ 使用名：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/logo.png" data-alt="布袋豆腐LOGO" title="点击查看LOGO">布袋豆腐</span>。
 │ ├ 生产商：大理市布袋食品加工坊。
 │ ├ 注册日期：2023年4月25日。
