--- a/_includes/tofu/product/index.html
+++ b/_includes/tofu/product/index.html
@@ -1,53 +1,9 @@
-├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">产品</span><div class="collapse-body">
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><em class="hot" title="热销">热</em><div class="collapse-body">
-│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
-│ │ │ ├ 名称：豆干。
-│ │ │ ├ 成分：黄豆、饮用水、无碘海盐等。
-│ │ │ ├ 保鲜期：5～2℃冷藏达5～7天。
-│ │ │ ├ 生产日期：2023/02/07。
-│ │ │ └ 生产许可证：QS3706 2301 0019。</div></div>
-│ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
-│ │    ├ 袋装<span class="gallery-open-btn" data-src="/assets/img/a/01.jpg" data-alt="袋装豆干" title="查看图片">图片</span>
-│ │    │ ├ 重量：500克。
-│ │    │ └ 售价：12.5元/袋，含0.5元包装费。
-│ │    └ 散装
-│ │       └ 售价：12元/500克，需自带容器。</div></div>
-│ │</div></div>
-│ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">其他</span><div class="collapse-body">
-│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">白豆腐</span><em class="recommend" title="推荐">荐</em><div class="collapse-body">
-│    │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
-│    │    ├ 袋装
-│    │    │ ├ 重量：见包装。
-│    │    │ └ 售价：见包装/盒，含0.5元包装费。
-│    │    └ 散装
-│    │       └ 售价：6元/斤，需自带容器。</div></div></div></div>
-│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">冻豆腐</span><div class="collapse-body">
-│    │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
-│    │    ├ 袋装
-│    │    │ ├ 重量：1000克。
-│    │    │ └ 售价：14.5元/袋，含0.5元包装费。
-│    │    └ 散装
-│    │       └ 售价：7元/斤，需自带容器。</div></div></div></div>
-│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><em class="hot" title="热销">热</em><div class="collapse-body">
-│    │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
-│    │    ├ 袋装
-│    │    │ ├ 重量：500克。
-│    │    │ └ 售价：14.5元/袋，含0.5元包装费。
-│    │    └ 散装
-│    │       └ 售价：14元/斤，需自带容器。</div></div></div></div>
-│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">毛豆腐</span><div class="collapse-body">
-│    │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
-│    │    ├ 袋装
-│    │    │ ├ 重量：1000克。
-│    │    │ └ 售价：16.5元/袋，含0.5元包装费。
-│    │    └ 散装
-│    │       └ 售价：8元/斤，需自带容器。</div></div></div></div>
-│    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆腐乳</span><em class="new" title="上新">新</em><div class="collapse-body">
-│       └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">分类</span><div class="collapse-body">
-│          ├ 大瓶
-│          │ ├ 重量：≈1.5千克。
-│          │ └ 售价：38元。
-│          └ 小瓶
-│             ├ 重量：≈300克。
-│             └ 售价：8元。</div></div></div></div><!-- others --></div></div>
+├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">产品</span><div class="collapse-body active">
+{% include tofu/product/a.html %}
+│ └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">其他</span><div class="collapse-body active">
+{% include tofu/product/b/a.html %}
+{% include tofu/product/b/b.html %}
+{% include tofu/product/b/c.html %}
+{% include tofu/product/b/d.html %}
+{% include tofu/product/b/e.html %}</div></div>
 │</div></div>
