--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   font-family: simsun, serif;
-  font-size: 13px;
+  font-size: 18px;
   letter-spacing: -1px;
   line-height: 1;
 }
@@ -18,13 +18,15 @@ body {
 .brand {
   position: fixed;
   left: 10px;
-  top: 13px;
+  top: 10px;
   z-index: 10000;
-  background-color: white;
 }
 
 pre {
   white-space: pre;
+  background-color: mintcream;
+  box-sizing: border-box;
+  width: 60%;
   padding: 30px 10px 10px;
   margin: 0;
   font-family: simsun, serif;
@@ -43,16 +45,59 @@ a {
   }
 }
 
+abbr {
+  cursor: help;
+}
+
+dfn {
+  font-style: normal;
+  text-decoration: underline dotted;
+}
+
+sup, sub {
+  position: relative;
+}
+
+sup {
+  vertical-align: top;
+  top: -4px;
+}
+
+sub {
+  vertical-align: bottom;
+  bottom: -4px;
+}
+
+q {
+  &:before {
+    content: "「";
+  }
+  
+  &:after {
+    content: "」";
+  }
+}
+
+rt {
+  position: relative;
+  bottom: -2px;
+}
+
+mark {
+  background-color: beige;
+  font-style: italic;
+}
+
 .no-ml {
   margin-left: 0!important;
 }
 
-.inactived {
+.muted {
   display: inline;
-  opacity: .5;
+  opacity: .4;
 }
 
-.recommend, .hot, .new {
+.recommend, .hot, .new, .pic {
   cursor: help;
   position: relative;
   top: -2px;
@@ -77,15 +122,22 @@ a {
 .collapse {
   display: inline;
   
-  &-toggler {
+  .collapse-toggler {
     cursor: pointer;
-    /*border-bottom: 1px dotted;*/
     color: blue;
     text-decoration: none;
+    
+    &.active {
+      font-weight: bold;
+    }
   }
   
-  &-body {
+  .collapse-body {
     display: none/* inline */;
+    
+    &.active {
+      display: inline;
+    }
   }
 }
 
@@ -102,7 +154,7 @@ a {
   display: none;
   position: absolute;
   z-index: 9999;
-  width: 300px;
+  width: 340px;
   box-shadow: 10px 10px 50px rgba(0,0,0, .2);
   
   &-close-btn {
@@ -113,7 +165,7 @@ a {
     span {
       /*transition: rotate .2s;*/
       display: block;
-      padding: 6px;
+      padding: 10px;
       color: #ccc;
       font-size: 10px;
       &:hover {
@@ -149,17 +201,22 @@ a {
   }
   
   &-content {
-    max-height: 450px; 
+    max-height: 400px; 
     overflow: auto;
     background-color: yellow;
     padding: 15px;
     color: black;
-    line-height: 1.45;
+    line-height: 1.475;
     text-align: left;
     
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 0;
+      margin-bottom: 18px;
+      font-size: 20px;
+    }
+    
     p {
-      display: inline;
-      margin: 0;
+      margin:18px 0;
     }
   }
   
@@ -170,15 +227,14 @@ a {
       cursor: pointer;
       border: none;
       position: relative;
+      padding: 8px 10px;
     }
   }
 }
 
 @media only screen and (max-width: 600px) {
-  body {
-    font-size: 16px;
-  }
   pre {
+    width: 100%;
     padding-top: 35px;
     overflow: scroll;
   }
