更新图片路径、背景颜色

--- a/_includes/tofu/product/b/b.html
+++ b/_includes/tofu/product/b/b.html
@@ -3,7 +3,7 @@
 │    │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水、菜籽油<sub>非转</sub>、海盐<sub>无碘</sub>。
 │    │ │ └ 保鲜期：4～2℃冷藏达5～7天。
 │    │ │</div></div>
-│    │ └ 袋装<sup class="gallery-open-btn pic" data-src="/assets/img/c/01.jpg" data-alt="袋装油豆腐" title="点击查看图片">图片</sup>
+│    │ └ 袋装<sup class="gallery-open-btn pic" data-src="/assets/img/tofu/c/01.jpg" data-alt="袋装油豆腐" title="点击查看图片">图片</sup>
 │    │    ├ 重量：500克。
 │    │    └ 售价：14元/袋。
 │    │</div></div>
