--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: simsun, serif;
+  font-family: kaiti, simsun, simhei, serif;
   font-size: 18px;
   letter-spacing: -1px;
   line-height: 1;
@@ -20,6 +20,7 @@ body {
   left: 10px;
   top: 10px;
   z-index: 10000;
+  font-family: simsun, kaiti, simhei, serif;
 }
 
 pre {
@@ -29,7 +30,7 @@ pre {
   width: 60%;
   padding: 30px 10px 10px;
   margin: 0;
-  font-family: simsun, serif;
+  font-family: kaiti, simsun, simhei, serif;
 }
 
 blockquote {
@@ -199,7 +200,6 @@ mark {
     bottom: auto; 
     width: 47%; 
     z-index: 9998;
-    font-family: kaiti, serif;
   }
   
   &-content {
