更新产品的图标

--- a/_includes/tofu/product/b/b.html
+++ b/_includes/tofu/product/b/b.html
@@ -1,4 +1,4 @@
-│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><em class="hot"><abbr  title="热销">热</abbr></em><div class="collapse-body">
+│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><em class="hot"><abbr  title="热销">🟠热</abbr></em><div class="collapse-body">
 │    │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │    │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水、菜籽油<sub>非转</sub>、海盐<sub>无碘</sub>。
 │    │ │ └ 保鲜期：4～2℃冷藏达5～7天。
