--- a/_includes/tofu/product/b/c.html
+++ b/_includes/tofu/product/b/c.html
@@ -1,7 +1,7 @@
-│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">冻豆腐</span><em class="new"><abbr  title="上新">新</abbr></em><div class="collapse-body">
+│    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">冻豆腐</span><em class="new"><abbr  title="上新">🟢新</abbr></em><div class="collapse-body">
 │    │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │    │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
-│    │ │ └ 保鲜期：0～-5℃冷藏达90天。
+│    │ │ └ 保鲜期：-2～-5℃冷藏达30天以上。
 │    │ │</div></div>
 │    │ └ 袋装
 │    │    ├ 重量：1000克。
