--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,7 @@ mark {
   opacity: .4;
 }
 
-.recommend, .hot, .new, .pic {
+.recommend, .primary, .hot, .new, .pic {
   cursor: help;
   position: relative;
   top: -2px;
@@ -112,6 +112,10 @@ mark {
   font-size: 65%;
   font-style: normal;
   border-bottom: 1px dotted;
+}
+
+.primary {
+  color: red;
 }
 
 .recommend {
@@ -163,6 +167,7 @@ mark {
   z-index: 9999;
   width: auto;
   max-width: 340px;
+  background-color: white;
   box-shadow: 10px 10px 50px rgba(0,0,0, .2);
   
   &-close-btn {
