--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -1,4 +1,4 @@
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><em class="hot">⇠<abbr  title="主打产品">主打</abbr></em><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><em class="primary"><abbr  title="主打产品">🔴主</abbr></em><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水、海盐<sub>无碘</sub>等。
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天。
