--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -2,10 +2,9 @@
    │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
    │ │ └ <em>敬请期待...</em></div></div>
    │ ├ 银桥（头铺村）
-   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">线上</span><div class="collapse-body">
+   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
    │    └ 目前支持地区
-   │       ├ 云南
-   │       ├ 四川
-   │       └ 重庆
-   │          └ 请加我们的微信：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/qrcode.png" data-alt="悟文的微信二维码" title="点击查看二维码">bdspjgf</span>，与我们联系。</div></div>
+   │       ├ 云南省
+   │       └ 四川省
+   │          └ 需邮寄请与我们联系沟通。</div></div>
    │</div></div>
