--- a/_includes/tofu/sales/b.html
+++ b/_includes/tofu/sales/b.html
@@ -1,11 +1,10 @@
       ├ 当前
       │ ├ 素方舟
       │ ├ 一沐坤（三塔路）
-      │ ├ 大昌盛超市（叶榆路店）
-      │ └ 优鲜（大理大学）
+      │ └ <span class="muted">大昌盛超市（叶榆路店）</span>
       │
       └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">计划</span><div class="collapse-body">
-         └ 我们也想在以下地区销售，有意者请与我们联系。<div class="muted">
+         └ 我们也期望在以下地区销售，有意者请与我们联系。<div class="muted">
             ├ 喜洲
             ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
             │ └ 人民路/复兴路</div></div>
