--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,5 +30,14 @@
     {% include gallery.html %}
     {% include posts.html %}
   </div>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MVB3SC8YVX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-MVB3SC8YVX');
+  </script>
 </body>
 <html>
