更改posts的样式

--- a/css/main.scss
+++ b/css/main.scss
@@ -215,7 +215,7 @@ mark {
     max-height: 370px; 
     overflow: auto;
     background-color: white;
-    padding: 15px;
+    padding: 20px 25px;
     color: black;
     line-height: 1.375;
     text-align: left;
