--- a/css/main.scss
+++ b/css/main.scss
@@ -244,6 +244,13 @@ mark {
       color: blue;
       border-bottom: 1px dotted;
     }
+    #loading1 {
+      background-color: black; 
+      color: white; 
+      font-size: 70%; 
+      padding: 0 5px; 
+      box-sizing: border-box;
+    }
   }
 }
 
