--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,5 +1,6 @@
 <div class="post-container">
     <div class="post-content">
+      <div class="bdhs"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><span>布袋和尚像，大英博物馆藏。</span></div>
       {% for post in site.posts %}
         {% if post.title == "「布袋和尚」东土应化事迹" %}
           <div id="post">{{ post.content }}</div>
@@ -8,8 +9,8 @@
     </div>
     {% unless site.posts.size == 1 %}
       <div class="post-controls">
-        <button id="btn-prev" type="button">◀</button>
-        <button id="btn-next" type="button">▶</button>
+        <button id="btn-prev" type="button" title="上一条">◀</button>
+        <button id="btn-next" type="button" title="下一条">▶</button>
         <div id="loading1" style="display: none;">加载中...</div>
       </div>
     {% endunless %}
