--- a/_includes/tofu/sales/index.html
+++ b/_includes/tofu/sales/index.html
@@ -1,5 +1,5 @@
-└ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">销售点</span><div class="collapse-body active">
+└ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">销售点</span><div class="collapse-body">
 {% include tofu/sales/a.html %}
-   └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">经销商</span><div class="collapse-body active">
+   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">经销商</span><div class="collapse-body">
 {% include tofu/sales/b.html %}</div></div>
 </div></div>
