--- a/_includes/tofu/about.html
+++ b/_includes/tofu/about.html
@@ -1,7 +1,7 @@
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">关于</span><div class="collapse-body">
-│ ├ 使用名：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/logo.png" data-alt="布袋豆腐LOGO" title="点击查看LOGO">布袋豆腐</span>。
+│ ├ 使用名：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/logo.png" data-alt="布袋豆腐LOGO" data-width="300px" title="点击查看LOGO">布袋豆腐</span>。
 │ ├ 生产商：大理市布袋食品加工坊。
 │ ├ 注册日期：2023年4月20日。
 │ ├ 电话：19542586219。
-│ └ 微信：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/qrcode.png" data-alt="悟文的微信二维码" title="点击查看二维码">bdspjgf</span>。
+│ └ 微信：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/qrcode.png" data-alt="悟文的微信二维码" data-width="300px" title="点击查看二维码">bdspjgf</span>。
 │</div></div>
