--- a/css/main.scss
+++ b/css/main.scss
@@ -270,6 +270,10 @@ mark {
 }
 
 @media only screen and (max-width: 600px) {
+  .post-container {
+    padding-top: 10px;
+  }
+  
   .post-content .bdhs {
     width: 100%;
     float: none;
