--- a/_includes/tofu/about.html
+++ b/_includes/tofu/about.html
@@ -1,7 +1,7 @@
 ├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">关于</span><div class="collapse-body active">
-│ ├ 使用名：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/logo.png" data-alt="布袋豆腐LOGO" data-maxwidth="300px" title="点击查看LOGO">布袋豆腐</span>。
+│ ├ 使用名：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/logo.png" data-alt="布袋豆腐LOGO" data-width="300px" title="点击查看LOGO">布袋豆腐</span>。
 │ ├ 注册名：大理市布袋食品加工坊。
 │ ├ 注册日：<time><code>2023年4月20日</code></time>。
 │ ├ 手机号：<code>19542586219</code>。
-│ └ 微信号：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/qrcode.png" data-alt="悟文的微信二维码" data-maxwidth="300px" title="点击查看二维码"><code>bdspjgf</code></span>。
+│ └ 微信号：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/qrcode.png" data-alt="悟文的微信二维码" data-width="300px" title="点击查看二维码"><code>bdspjgf</code></span>。
 │</div></div>
