--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,39 @@
     xhttp.open(options.method, options.url, true);
     xhttp.send();
   };
+  
+  function draggable(el) {
+      var pos1, pos2, pos3, pos4;
+      
+      el.onmousedown = dragMouseDown;
+      
+      function dragMouseDown(e) {
+        e.preventDefault();
+        
+        pos3 = e.clientX;
+        pos4 = e.clientY;
+        
+        document.onmouseup = closeDrag;
+        document.onmousemove = drag;
+      };
+      
+      function drag(e) {
+        e.preventDefault();
+        
+        pos1 = pos3 - e.clientX;
+        pos2 = pos4 - e.clientY;
+        pos3 = e.clientX;
+        pos4 = e.clientY;
+        
+        el.style.top = (el.offsetTop - pos2) + 'px';
+        el.style.left = (el.offsetLeft - pos1) + 'px';
+      };
+      
+      function closeDrag() {
+        document.onmouseup = null;
+        document.onmousemove = null;
+      };
+    };
   </script>
 </head>
 <body>
