--- a/css/main.scss
+++ b/css/main.scss
@@ -146,6 +146,10 @@ mark {
   color: lime;
 }
 
+.pic span {
+  padding: 0 3px;
+}
+
 .collapse {
   display: inline;
   
@@ -182,7 +186,7 @@ mark {
   position: absolute;
   z-index: 9999;
   width: auto;
-  max-width: 500px;
+  max-width: 600px;
   background-color: white;
   box-shadow: 10px 10px 50px rgba(0,0,0, .2);
   
