--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -1,9 +1,8 @@
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><em class="primary"><abbr title="主打产品">主打</abbr></em><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水、老抽、八角、海盐<sub>无碘</sub>等。
-│ │ │ └ 保鲜期：4～2℃冷藏达5～7天。
-│ │ │</div></div>
+│ │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
 │ │ └ 袋装<sub class="pic">（图片：<span class="gallery-open-btn" data-src="/assets/img/tofu/a/01.jpg" data-alt="袋装豆干" title="点击查看图片">1</span><span class="gallery-open-btn" data-src="/assets/img/tofu/a/02.jpg" data-alt="袋装豆干" title="点击查看图片">2</span><span class="gallery-open-btn" data-src="/assets/img/tofu/a/03.jpg" data-alt="袋装豆干" title="点击查看图片">3</span>）</sub>
-│ │    ├ 重量：500克。
-│ │    └ 售价：12元/袋。
+│ │   ├ 重量：500克。
+│ │   └ 售价：12元/袋。
 │ │</div></div>
