--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -1,10 +1,10 @@
-   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营</span><div class="collapse-body">
-   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
-   │ │ └ <em>敬请期待...</em></div></div>
-   │ ├ 银桥（头铺村）
-   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
-   │    └ 目前支持地区
-   │       ├ 云南省
-   │       └ 四川省
-   │          └ 需邮寄请与我们联系沟通。</div></div>
-   │</div></div>
+  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
+  │ │ └ <em style="background-color: yellow;">敬请期待...</em></div></div>
+  │ ├ 银桥（头铺村）
+  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
+  │   └ 目前支持地区
+  │     ├ 云南省
+  │     └ 四川省
+  │       └ 需邮寄请与我们联系沟通。</div></div>
+  │</div></div>
