--- a/css/main.scss
+++ b/css/main.scss
@@ -41,7 +41,7 @@ pre {
   width: 100%;
   padding: 27px 10px 10px;
   margin: 0;
-  font-family: menlo, consolas, simkai, simsun, simhei, serif;
+  font-family: menlo, consolas, 'source code pro', 'cascadia mono', simkai, simsun, simhei, serif;
   line-height: 1.175;
   white-space: pre;
   overflow: scroll;
