--- a/css/main.scss
+++ b/css/main.scss
@@ -4,14 +4,16 @@
 
 @charset "utf-8";
 
+/*
 @font-face {
   font-family: 'simkai';
   src: url('/assets/fonts/simkai.ttf');
 }
+*/
 
 body {
   margin: 0;
-  font-family: simkai, simsun, simhei, serif;
+  font-family: simkai, kaiti, simsun, simhei, serif;
   font-size: 18px;
   letter-spacing: -1px;
   line-height: 1;
@@ -24,7 +26,7 @@ body {
 .brand {
   position: fixed;
   z-index: 10000;
-  font-family: simsun, simkai, simhei, serif;
+  font-family: simsun, simkai, kaiti, simhei, serif;
   width: 100%;
   padding: 4px 10px;
   background-color: ghostwhite;
@@ -41,7 +43,7 @@ pre {
   width: 100%;
   padding: 27px 10px 10px;
   margin: 0;
-  font-family: menlo, consolas, 'source code pro', 'cascadia mono', simkai, simsun, simhei, serif;
+  font-family: menlo, consolas, 'source code pro', 'cascadia mono', simkai, kaiti, simsun, simhei, serif;
   line-height: 1.175;
   white-space: pre;
   overflow: scroll;
